--- a/sass/main.sass
+++ b/sass/main.sass
@@ -555,7 +555,7 @@ body
     border-radius: 50%
     position: relative
     top: 0
-    right: 25px
+    right: 50px
     span
       width: 12px
       height: 4px
@@ -827,7 +827,8 @@ body
 
 .about-us__slider-item
   border-radius: 10px
-  width: 100%
+  width: auto
+  margin: 0 4px
 
 .about-us__slider
   max-width: 1200px
@@ -1655,6 +1656,7 @@ div#choices--country-we-item-choice-1
       height: 3px
       top: 15px
       left: 6px
+      border-radius: 5px
       &:last-child
         left: 13px
 
@@ -1667,6 +1669,7 @@ div#choices--country-we-item-choice-1
         height: 3px
         top: 15px
         left: 6px
+        border-radius: 5px
         &:last-child
           left: 13px
 
@@ -1799,7 +1802,7 @@ div#choices--country-we-item-choice-1
     a
       font-size: 14px
 
-//=====================750px=========================
+//=====================768px=========================
 @media (max-width: 768px)
   .about-us__top-img
     img
@@ -1844,6 +1847,7 @@ div#choices--country-we-item-choice-1
     display: block
 
   .programm__accordion-title
+    position: relative
     flex-direction: column
     padding: 17px 0
     align-items: center
@@ -1861,30 +1865,21 @@ div#choices--country-we-item-choice-1
       margin: 0
 
   .programm__accordion-ellipse
+    position: absolute
     top: 80px
     left: 50%
     transform: translateX(-50%)
-
-  .programm__accordion-title--active
-    .programm__accordion-ellipse
-      height: 30px
-      width: 30px
-      left: -40%
-      top: 40px
-      span
-        height: 3px
-        top: 15px
-        left: 6px
-        &:last-child
-          left: 13px
 
   .prog__acc-box--5
     max-width: 163px
     text-align: center
 
   .programm__accordion-title--active
-    .programm__accordion-ellipse--5
-      width: 50px
+    .programm__accordion-ellipse
+      position: absolute
+      top: 80px
+      left: 50%
+      transform: translateX(-50%) rotate(180deg)
 
   .result__item
     grid-template: none
@@ -2073,6 +2068,7 @@ div#choices--country-we-item-choice-1
 
   .country__content
     flex-direction: column
+    align-items: center
 
   .country__content-btn2
     display: none
@@ -2083,14 +2079,14 @@ div#choices--country-we-item-choice-1
     font-size: 16px
     line-height: 55px
     border-radius: 5px
-    max-width: 320px
+    width: 100%
 
   .country__content-left
     margin-bottom: 15px
 
   .country__content-right
     max-width: 340px
-    margin-bottom: 12px
+    margin-bottom: 20px
 
   .country__content-title
     font-size: 18px
@@ -2317,7 +2313,7 @@ div#choices--country-we-item-choice-1
     width: 100%
     text-align: center
     font-size: 16px
-    padding: 0 47px
+    padding: 0
     line-height: 55px
 
   .blue-icons__brands
@@ -2344,6 +2340,10 @@ div#choices--country-we-item-choice-1
   .about-us__top
     margin-top: 10px
     margin-bottom: 100px
+
+  .about-us__slider-item
+    width: 162px
+    margin: 0 3px
 
   .slick-slide
     img
@@ -2496,3 +2496,26 @@ div#choices--country-we-item-choice-1
       font-size: 10px
     p
       margin-bottom: 10px
+
+//=====================340============================
+
+@media (max-width: 355px)
+  .blue-icons-btn
+    font-size: 13px
+    padding: 0
+
+  .becom-partner__btn
+    padding: 0
+//=====================340============================
+
+@media (max-width: 340px)
+
+  .about-us__founder-text
+    div
+      left: 215px
+
+  .partners__content-item
+    width: 137px
+
+  .contact__form
+    width: 285px
