--- a/sass/main.sass
+++ b/sass/main.sass
@@ -113,9 +113,91 @@ body
       top: 4px
       left: 3px
 
-//===================ГЛАВНОЕ-СВЕРХУ======================
+//======================POP-UP=========================
 
-//===================HEADER==============================
+.pop-up__container
+  display: none
+  position: fixed
+  width: 100%
+  height: 100vh
+  top: 0
+  left: 0
+  z-index: 100
+  background-color: rgba(0, 0, 0, 0.59)
+
+.pop-up__inner
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  background-color: #FFFFFF
+  border-radius: 5px
+  width: 320px
+  display: flex
+  flex-direction: column
+  align-items: center
+  padding: 0 30px 20px 30px
+
+.pop-up__title
+  font-weight: 600
+  font-size: 16px
+  padding: 20px 0
+
+.pop-up__input
+  width: 100%
+  background: #F1F1F1
+  border-radius: 5px
+  font-weight: 400
+  font-size: 14px
+  padding: 10px 0 10px 21px
+  color: #707070
+  margin-bottom: 10px
+
+.pop-up__btn
+  font-weight: 500
+  font-size: 14px
+  width: 100%
+  padding: 11px 0
+  border-radius: 5px
+  margin-bottom: 15px
+
+.pop-up__link
+  font-weight: 500
+  font-size: 12px
+  color: #07AF91
+  border-bottom: 1px solid transparent
+  transition: all .3s
+  &:hover
+    border-bottom: 1px solid #07AF91
+
+.pop-up__close
+  position: absolute
+  width: 30px
+  height: 30px
+  top: -37px
+  right: 0
+  span
+    position: absolute
+    top: 50%
+    left: 0
+    transform: translateY(-50%) rotate(45deg)
+    display: block
+    width: 30px
+    height: 2px
+    border-radius: 10px
+    background-color: #fff
+    &::after
+      content: ""
+      display: block
+      transform: rotate(-90deg)
+      width: 30px
+      height: 2px
+      border-radius: 4px
+      background-color: #fff
+
+//===================ГЛАВНОЕ-СВЕРХУ=====================
+
+//===================HEADER=======================
 
 .header__top-inner
   display: flex
@@ -1557,6 +1639,7 @@ div#choices--country-we-item-choice-1
 
   .logo__img
     width: 124px
+    margin-right: 5px
 
   .service__btn
     padding: 15px 28px
@@ -2282,7 +2365,7 @@ div#choices--country-we-item-choice-1
 
   .country__list-item
     font-size: 10px
-    padding: 0
+    padding: 0 5px
     flex-basis: 180px
     text-align: center
 
@@ -2408,7 +2491,7 @@ div#choices--country-we-item-choice-1
   .becom-partner__btn
     font-size: 16px
     line-height: 55px
-    width: 100%
+    max-width: 310px
 
   .contact
     height: 758px
@@ -2505,7 +2588,7 @@ div#choices--country-we-item-choice-1
     padding: 0
 
   .becom-partner__btn
-    padding: 0
+    padding: 0 40px
 //=====================340============================
 
 @media (max-width: 340px)
@@ -2513,9 +2596,17 @@ div#choices--country-we-item-choice-1
   .about-us__founder-text
     div
       left: 215px
+      top: 375px
 
   .partners__content-item
     width: 137px
 
   .contact__form
     width: 285px
+
+  .country__content-box
+    margin-right: 10px
+    margin-bottom: 10px
+
+  .becom-partner
+    padding-top: 90px
